[package]
build = 'build.rs'
edition = '2021'
name = 'ton_block'
version = '1.8.14'

[dependencies]
base64 = '0.13'
crc = '3.0'
ed25519 = '1.0'
ed25519-dalek = '1.0'
failure = '0.1'
hex = '0.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
sha2 = '0.10'
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.4' }

[features]
ci_run = [  ]
gosh = [  ]

