[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_block'
version = '1.9.74'

[dependencies]
base64 = '0.13'
crc = '3.0'
ed25519 = '1.0'
ed25519-dalek = '1.0'
failure = '0.1'
hex = '0.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
sha2 = '0.10'
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.13' }

[features]
default = [  ]
gosh = [  ]
groth = [  ]
signature_with_id = [  ]

